--- a/chinese-economy.html
+++ b/chinese-economy.html
@@ -954,3 +954,19 @@
 <p>    中国的改革原本就是采取先易后难的路径。这种制度选择本身看上去好像符合现实，但却是中国的官僚体系的特色，那就是甩包袱的击鼓传花方式，把麻烦留给继任者。最难啃的骨头让接班人去干。</p>
 <p>    中国对GDP的崇拜和对GNP别有用心的束之高阁，就可以看到委府发展的基本思路。</p>
 <p>    这种现象，是不是很耐人寻味？
+{% if page.comments %}
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'ymsblog'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+{% endif %}
